--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <div class="container">
-        <button type="submit" class="btn" onclick="openPopup()">Submit</button>
+        <button type="submit" class="btn" onclick="openPopup()">Don't click</button>
         <div class="popup" id="popup">
             <img src="404-tick.png">
-            <h2>Grazie Mille</h2>
-            <p>Your details have been succesfully submitted. Thanks</p>
+            <h2>Fuji-san</h2>
+            <p>“Aspire to be like Mt. Fuji, with such a broad and solid foundation that the strongest earthquake cannot move you, and so tall that the greatest enterprises of common men seem insignificant from your lofty perspective. With your mind as high as Mt Fuji you can see all things clearly. And you can see all the forces that shape events; not just the things happening near to you.”</p>
+            <p>Miyamoto Musashi</p>
             <button type="button" onclick="closePopup()">OK</button>
         </div>
     </div>
